--- a/package.json
+++ b/package.json
@@ -15,13 +15,14 @@
   "dependencies": {
     "@babel/plugin-transform-runtime": "^7.10.4",
     "@babel/preset-react": "^7.10.1",
-    "@hapi/joi": "^17.1.1",
+    "@material-ui/core": "^4.11.0",
     "bcrypt": "^5.0.0",
     "css-loader": "^3.6.0",
-    "express-joi-validation": "^4.0.4-beta.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-redux": "^7.2.1",
     "react-router-dom": "^5.2.0",
+    "redux": "^4.0.5",
     "webpack-dev-server": "^3.11.0"
   },
   "devDependencies": {
